--- a/package.json
+++ b/package.json
@@ -4,16 +4,41 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "start": "gulp",
+    "build": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^1.6.7"
+    "bootstrap": "4",
+    "electron": "^1.6.7",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "react-toolbox": "^2.0.0-beta.12",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "bootstrap-webpack": "^0.0.6",
+    "css-loader": "^0.28.4",
     "electron-connect": "^0.6.1",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "node-sass": "^4.5.3",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-modules-values": "^1.3.0",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.2",
+    "webpack": "^2.6.1"
   }
 }
