--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "4",
     "electron": "^1.6.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -29,7 +28,6 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bootstrap-webpack": "^0.0.6",
     "css-loader": "^0.28.4",
     "electron-connect": "^0.6.1",
     "gulp": "^3.9.1",
@@ -37,6 +35,7 @@
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.6",
     "postcss-modules-values": "^1.3.0",
+    "prop-types": "^15.5.10",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
