--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^1.6.7",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "pg": "^6.4.0",
+    "pg-hstore": "^2.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
@@ -20,7 +24,8 @@
     "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sequelize": "^4.2.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -28,6 +33,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chalk": "^2.0.1",
     "css-loader": "^0.28.4",
     "electron-connect": "^0.6.1",
     "gulp": "^3.9.1",
@@ -35,7 +41,6 @@
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.6",
     "postcss-modules-values": "^1.3.0",
-    "prop-types": "^15.5.10",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
