--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "gulp",
-    "build": "webpack -w",
+    "build": "webpack -w --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -36,6 +36,7 @@
     "css-loader": "^0.28.4",
     "dotenv": "^4.0.0",
     "electron-connect": "^0.6.1",
+    "electron-devtools-installer": "^2.2.0",
     "gulp": "^3.9.1",
     "node-sass": "^4.5.3",
     "postcss-cssnext": "^2.11.0",
