--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^4.10.1",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.2.1"
   },
