--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "avarona",
   "license": "ISC",
+  "babelrc": {
+    "presets": [
+      "react",
+      "env"
+    ]
+  },
   "dependencies": {
     "electron": "^1.6.7",
     "electron-oauth2": "^2.4.1",
@@ -29,10 +35,9 @@
     "sequelize": "^4.2.1"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.0.1",
     "css-loader": "^0.28.4",
