--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "build": "./scripts/development.sh",
     "start": "gulp",
-    "build": "webpack -w --progress --colors",
     "seed": "node ./db/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -43,6 +43,7 @@
     "css-loader": "^0.28.4",
     "dotenv": "^4.0.0",
     "electron-connect": "^0.6.1",
+    "electron-webpack": "^2.6.2",
     "gulp": "^3.9.1",
     "node-sass": "^4.5.3",
     "postcss-cssnext": "^2.11.0",
@@ -50,6 +51,9 @@
     "postcss-modules-values": "^1.3.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
-    "webpack": "^2.6.1"
+    "typescript": "^3.4.5",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   }
 }
