--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "sequelize": "^4.2.1"
   },
   "devDependencies": {
+    "@types/react": "^16.8.17",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.8",
+    "@types/react-router-dom": "^4.3.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.6.0",
@@ -44,11 +48,17 @@
     "dotenv": "^4.0.0",
     "electron-connect": "^0.6.1",
     "electron-webpack": "^2.6.2",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "gulp": "^3.9.1",
     "node-sass": "^4.5.3",
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.6",
     "postcss-modules-values": "^1.3.0",
+    "prettier": "^1.17.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
     "typescript": "^3.4.5",
